--- a/index.html
+++ b/index.html
@@ -11,33 +11,45 @@
       padding: 20px;
       max-width: 600px;
       margin: 0 auto;
+      text-align: center; /* Center text and inputs */
     }
     h1 {
-      text-align: center;
       margin-bottom: 30px;
     }
     label {
       display: block;
       margin-top: 15px;
+      text-align: left;
+      max-width: 300px;
+      margin-left: auto;
+      margin-right: auto;
     }
-    input, select {
+    input[type="time"], input[type="number"] {
       font-size: 1rem;
       padding: 8px;
       width: 100%;
+      max-width: 300px;
       margin-top: 5px;
       box-sizing: border-box;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+      text-align: center; /* Center time text inside the input */
     }
     button {
       margin-top: 20px;
       padding: 10px;
       font-size: 1rem;
       width: 100%;
+      max-width: 300px;
       cursor: pointer;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
     #result {
       margin-top: 25px;
       font-size: 1.2rem;
-      text-align: center;
       font-weight: bold;
     }
   </style>
@@ -45,19 +57,11 @@
 <body>
   <h1>Calculate My Fasting Period</h1>
 
-  <label for="lastMeal">Last Meal Time (12-hour format):</label>
+  <label for="lastMeal">Last Meal Time:</label>
   <input type="time" id="lastMeal" />
-  <select id="lastMealPeriod">
-    <option value="AM">AM</option>
-    <option value="PM">PM</option>
-  </select>
 
-  <label for="firstMeal">First Meal Time (12-hour format):</label>
+  <label for="firstMeal">First Meal Time:</label>
   <input type="time" id="firstMeal" />
-  <select id="firstMealPeriod">
-    <option value="AM">AM</option>
-    <option value="PM">PM</option>
-  </select>
 
   <label for="days">Days Between Meals:</label>
   <input type="number" id="days" min="0" value="0" />
@@ -67,18 +71,9 @@
   <div id="result"></div>
 
   <script>
-    function convertTo24Hour(timeStr, period) {
-      let [hours, minutes] = timeStr.split(":").map(Number);
-      if (period === "PM" && hours !== 12) hours += 12;
-      if (period === "AM" && hours === 12) hours = 0;
-      return { hours, minutes };
-    }
-
     function calculateFast() {
       const lastTime = document.getElementById("lastMeal").value;
-      const lastPeriod = document.getElementById("lastMealPeriod").value;
       const firstTime = document.getElementById("firstMeal").value;
-      const firstPeriod = document.getElementById("firstMealPeriod").value;
       const days = parseInt(document.getElementById("days").value);
 
       if (!lastTime || !firstTime || isNaN(days)) {
@@ -86,19 +81,23 @@
         return;
       }
 
-      const last = convertTo24Hour(lastTime, lastPeriod);
-      const first = convertTo24Hour(firstTime, firstPeriod);
+      function timeToMinutes(t) {
+        const [hours, minutes] = t.split(":").map(Number);
+        return hours * 60 + minutes;
+      }
 
-      let lastTotal = last.hours * 60 + last.minutes;
-      let firstTotal = first.hours * 60 + first.minutes + days * 1440;
+      const lastTotal = timeToMinutes(lastTime);
+      const firstTotal = timeToMinutes(firstTime) + days * 1440;
 
-      let diff = firstTotal - lastTotal;
+      const diff = firstTotal - lastTotal;
+
       if (diff < 0) {
         document.getElementById("result").innerText = "First meal time must be after last meal time (including days).";
         return;
       }
-      let hrs = Math.floor(diff / 60);
-      let mins = diff % 60;
+
+      const hrs = Math.floor(diff / 60);
+      const mins = diff % 60;
 
       document.getElementById("result").innerText = `Your fast lasted ${hrs} hours and ${mins} minutes.`;
     }
